--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-
+<!--    <script-->
+<!--            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrWa8gCLbJQ9vu4Uru29gy47YqKoEJD44&callback=initMap&libraries=&v=weekly"-->
+<!--            defer-->
+<!--    ></script>-->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
